<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">

    <TextView
        android:id="@+id/registerPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/EmailField"
        android:layout_width="256dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPrompt" />

    <EditText
        android:id="@+id/PasswordField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/EmailField"
        app:layout_constraintStart_toStartOf="@+id/EmailField"
        app:layout_constraintTop_toBottomOf="@+id/EmailField" />

    <EditText
        android:id="@+id/RePasswordField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/re_password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/PasswordField"
        app:layout_constraintStart_toStartOf="@+id/PasswordField"
        app:layout_constraintTop_toBottomOf="@+id/PasswordField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:onClick="onReturnToLogin"
        android:text="@string/return_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RePasswordField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:onClick="onRegister"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RePasswordField" />

</androidx.constraintlayout.widget.ConstraintLayout>