<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureActivity">

    <TextView
        android:id="@+id/curr_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/curr_score"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/curr_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/curr_player"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/dotCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDot"
        android:text="@string/dot_capture"
        app:layout_constraintBottom_toTopOf="@+id/lineCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectText" />

    <Button
        android:id="@+id/lineCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onLine"
        android:text="@string/line_capture"
        app:layout_constraintBottom_toTopOf="@+id/rectCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dotCapture" />

    <Button
        android:id="@+id/rectCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRect"
        android:text="@string/rect_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineCapture" />

    <TextView
        android:id="@+id/selectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectText"
        app:layout_constraintBottom_toTopOf="@+id/dotCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/curr_player" />
</androidx.constraintlayout.widget.ConstraintLayout>